using UnityEngine;
using System.Collections.Generic;
using System;

public class GridSystemManager : MonoBehaviour {
    private Dictionary<string, GridV2> grids = new Dictionary<string, GridV2>();
    private string filePath;

    // Creates a new grid based on the specified layout and parameters.
    public GridV2 CreateGrid(GridLayout layout, int rows, int columns, Vector3 origin, Quaternion rotation) 
    {
        throw new NotImplementedException();
    }

    // Registers a grid into the system for easy access and management.
    public void RegisterGrid(GridV2 grid) 
    {

    }

    // Unregisters a grid from the system.
    public void UnregisterGrid(GridV2 grid) 
    {

    }

    // Combines two grids into one.
    public void CombineGrids(GridV2 grid1, GridV2 grid2) 
    {

    }

    // Retrieves a grid by its ID.
    public GridV2 GetGridByID(string id) 
    {
        throw new NotImplementedException();
    }

    // Saves the state of all grids to a file.
    public void SaveAllGridsToFile() 
    {

    }

    // Loads the state of all grids from a file.
    public void LoadAllGridsFromFile() 
    {

    }
    public void SaveGridToFile(GridV2 grid) 
    { 
    
    }
    public GridV2 LoadGridFromFile()
    {
        throw new NotImplementedException();    
    }
}
